<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.site.SiteCreateOrEditActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="6dp"
            android:paddingEnd="6dp">

            <com.ing.ui.button.VisualImageButton
                android:id="@+id/iv_site_coe_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/ic_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

            <com.ing.ui.text.label.LabelView
                android:id="@+id/lb_coe_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/title_add_new_site"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        app:layout_constraintVertical_bias="0.0">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:paddingStart="@dimen/page_horizontal_padding"
            android:paddingEnd="@dimen/page_horizontal_padding"
            android:paddingBottom="84dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <com.ing.ui.text.title.TitleH5View
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="1dp"
                    android:text="@string/title_enter_site_name" />

                <com.ing.ui.text.title.TitleH5View
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="*"
                    app:customTextColor="@color/secondary_color05" />

            </LinearLayout>

            <com.ing.ui.text.edit.InputTextLayout
                android:id="@+id/itv_site_coe_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:inputMaxLine="1"
                app:inputSingleLine="true"
                app:inputHint="띄어쓰기 포함 최대 50자"
                app:inputMax="50"
                app:inputSupportSpacing="2dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <com.ing.ui.text.title.TitleH5View
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="1dp"
                    android:text="@string/title_select_site_type" />

                <com.ing.ui.text.title.TitleH5View
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="*"
                    app:customTextColor="@color/secondary_color05" />

                <com.ing.ui.text.caption.Caption2View
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:text="@string/caption_muti_select_enabled" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <com.ing.ui.check.VisualButtonCheckBox
                    android:id="@+id/vcb_site_coe_defects"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    app:checkBoxText="@string/label_defect_check"
                    app:isChecked="true" />

                <TextView
                    android:layout_width="8dp"
                    android:layout_height="match_parent" />


                <com.ing.ui.check.VisualButtonCheckBox
                    android:id="@+id/vcb_site_coe_management"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    app:checkBoxText="@string/label_site_management" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.ing.ui.text.title.TitleH5View
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="1dp"
                        android:text="@string/title_upload_site_plan_image" />

                    <com.ing.ui.text.caption.Caption2View
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:text="@string/caption_option" />

                </LinearLayout>

                <com.ing.ui.text.caption.Caption2View
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_new_site_1" />

                <com.ing.ui.button.VisualDefaultButton
                    android:id="@+id/btn_site_coe_add_image"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:clickable="true"
                    app:visualSrc="@drawable/ic_add_image"
                    app:visualText="@string/action_add_image"/>


                <LinearLayout
                    android:id="@+id/line_new_site_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <ImageView
                        android:id="@+id/iv_site_coe_image"
                        android:layout_width="match_parent"
                        android:layout_height="328dp"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        android:background="@drawable/bg_round_square_effect"
                        android:padding="2dp"
                        tools:src="@drawable/blueprint1"
                        tools:visibility="visible"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <com.ing.ui.button.VisualDefaultButton
                            android:id="@+id/btn_site_coe_edit_image"
                            android:layout_width="0dp"
                            android:layout_height="48dp"
                            android:layout_weight="1"
                            app:visualText="도면 편집"
                            app:visualSrc="@drawable/ic_edit_24"
                            app:visualIconSize="12dp"
                            />
                        
                        <View
                            android:layout_width="8dp"
                            android:layout_height="match_parent"/>

                        <com.ing.ui.button.VisualDefaultButton
                            android:id="@+id/btn_site_coe_remove_image"
                            android:layout_width="0dp"
                            android:layout_height="48dp"
                            android:layout_weight="1"
                            app:visualText="이미지 삭제"
                            app:visualSrc="@drawable/ic_close_24"
                            app:visualIconSize="12dp"
                            />

                    </LinearLayout>

                </LinearLayout>


                <com.ing.ui.text.caption.Caption2View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:lineSpacingExtra="4dp"
                    android:text="@string/hint_new_site_2" />


            </LinearLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

    <com.ing.ui.button.VisualButton
        android:id="@+id/btn_site_coe_commit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/page_horizontal_padding"
        android:layout_marginEnd="@dimen/page_horizontal_padding"
        android:layout_marginBottom="18dp"
        app:visualEnable="false"
        app:visualText="@string/action_add_new_site"
        app:layout_constraintBottom_toBottomOf="@+id/nestedScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/line_site_coe_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_20_color"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>