<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/page_horizontal_padding"
    android:paddingEnd="@dimen/page_horizontal_padding"
    tools:context=".ui.main.HomeFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_main_logo_horizon" />

    <TextView
        android:id="@+id/tv_home_main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendard_medium"
        android:lineSpacingExtra="8sp"
        android:text="@string/prompt_home_renovation_cost_estimate"
        android:textColor="@color/text_color_06"
        android:textSize="@dimen/title_h5"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:id="@+id/line_home_main_simple_estimation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingEnd="12dp"
        android:background="@drawable/bg_start_simple_interior"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_home_main_title">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_simple_estimate"
            android:textSize="@dimen/title_h4"
            android:fontFamily="@font/pretendard_medium"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/line_home_site_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_home_main_simple_estimation">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_04"
            android:textSize="@dimen/body2"
            android:fontFamily="@font/pretendard_medium"
            android:text="@string/tip_register_new_site"
            android:layout_marginBottom="1dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="bottom"
            android:layout_marginBottom="2dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_bold"
                android:text="@string/prompt_check_and_management"
                android:textColor="@color/text_color_06"
                android:textSize="@dimen/title_h3"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/iv_home_add"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:srcCompat="@drawable/ic_baseline_add_24"
                android:background="@drawable/bg_circle_effect"
                android:padding="4dp"
                android:layout_marginEnd="2dp"
                android:clickable="true"
                />

            <ImageView
                android:id="@+id/iv_home_search"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:srcCompat="@drawable/ic_baseline_search_24"
                android:background="@drawable/bg_circle_effect"
                android:padding="4dp"
                android:clickable="true"
                />

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_home_site_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <LinearLayout
            android:id="@+id/line_home_site_management"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/bg_home_site_management"
            android:clickable="true"
            >

            <TextView
                android:id="@+id/tv_home_site_management"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/pretendard_bold"
                android:text="@string/prompt_login_required"
                android:textSize="@dimen/title_h3"
                android:textColor="@color/text_color_06"
                android:gravity="center"
                android:lineSpacingExtra="8dp"/>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>