<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sign.SignInActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="6dp"
            android:paddingEnd="6dp">

            <com.ing.ui.button.ImageBackButton
                android:id="@+id/iv_login_back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/bg_circle_effect"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.ing.ui.text.LabelView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/menu_login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/line_login_prompt_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/page_horizontal_padding"
        android:paddingEnd="@dimen/page_horizontal_padding"
        android:paddingTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:srcCompat="@drawable/ic_main_logo_vertical" />

        <com.ing.ui.text.TitleH2View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/pretendard_semibold"
            android:lineSpacingExtra="8dp"
            android:text="@string/prompt_explore_more_interior_services" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <com.ing.ui.text.LabelView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_medium"
                android:text="1분" />

            <com.ing.ui.text.LabelView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_medium"
                android:text="이면 회원가입 가능해요."
                app:customTextColor="@color/text_color_04" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line_login_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/page_horizontal_padding"
        android:paddingEnd="@dimen/page_horizontal_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_login_prompt_layout"
        app:layout_constraintVertical_bias="0.85">

        <LinearLayout
            android:id="@+id/line_login_kakaotalk"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@drawable/bg_kakaotalk_button"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                app:srcCompat="@drawable/ic_logo_kakao_24" />

            <com.ing.ui.text.LabelView
                android:id="@+id/tv_login_kakaotalk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_login_kakaotalk" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/line_login_naver"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_naver_button"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="6dp"
                android:padding="2dp"
                app:srcCompat="@drawable/ic_logo_naver_24" />

            <com.ing.ui.text.LabelView
                android:id="@+id/tv_login_naver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_login_naver"
                app:customTextColor="@color/text_color_01" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/line_login_google"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_google_insta_button"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                app:srcCompat="@drawable/ic_logo_google_24" />

            <com.ing.ui.text.LabelView
                android:id="@+id/tv_login_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_login_google" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/line_login_instagram"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_google_insta_button"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                app:srcCompat="@drawable/ic_logo_instagram_24" />

            <com.ing.ui.text.LabelView
                android:id="@+id/tv_login_instagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_login_instagram" />

        </LinearLayout>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>